@@ -6,12 +6,15 @@ endif()
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(PreventInSourceBuilds)
 
+message(STATUS "configuring libcerf, with CERF_CPP=${CERF_CPP}")
 option(CERF_CPP "Build libcerf as native C++" OFF)
+message(STATUS "now option is CERF_CPP=${CERF_CPP}")
 option(LIB_MAN "Build libcerf man pages" ON)
 option(LIB_INSTALL "Install libcerf" ON)
 option(PEDANTIC "Compile with pedantic warnings" ON)
 
-if(${CERF_CPP})
+if(CERF_CPP)
+    message(STATUS "will compile project libcerf as C++ code")
     project(cerfcpp CXX)
     # add_compile_definitions(CERF_AS_CPP) # requires CMake 3.13, therefore more explicitly:
     if(MSVC)
@@ -21,6 +24,7 @@ if(${CERF_CPP})
     endif()
     set(CMAKE_CXX_STANDARD 14)
 else()
+    message(STATUS "will compile project libcerf as C code")
     project(cerf C)
     set(CMAKE_C_STANDARD 99)
 endif()
